force-app/main/default/objects/InvoiceInformation__c/InvoiceInformation__c.object-meta.xml
<CustomObject>
    <label>請求書情報</label>
    <nameField>
        <displayFormat>{YYYYMM}-{000000}</displayFormat>
        <label>請求書番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>