force-app/main/default/objects/InvoiceInformation__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <formula>BillingRepName__r.Address__c</formula>
    <label>請求先住所</label>
    <type>Text</type>
</CustomField>