force-app/main/default/objects/InvoiceInformation__c/fields/BillingAmount__c.field-meta.xml
<CustomField>
    <fullName>BillingAmount__c</fullName>
    <label>【削除予定】請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>