force-app/main/default/objects/InvoiceInformation__c/fields/BillingMailAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingMailAddress__c</fullName>
    <label>請求先メールアドレス</label>
    <type>Email</type>
</CustomField>