force-app/main/default/objects/InvoiceInformation__c/fields/BillingName__c.field-meta.xml
<CustomField>
    <fullName>BillingName__c</fullName>
    <formula>BillingRepName__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求先名</label>
    <type>Text</type>
</CustomField>