force-app/main/default/objects/InvoiceInformation__c/fields/BillingPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>BillingPaymentMethod__c</fullName>
    <label>支払い手段</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>請求書支払い</fullName>
            </value>
            <value>
                <fullName>口座振替</fullName>
            </value>
            <value>
                <fullName>クレジットカード支払い</fullName>
            </value>
            <value>
                <fullName>ただ乗り</fullName>
            </value>
            <value>
                <fullName>請求書発行対象外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>