force-app/main/default/objects/InvoiceInformation__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <formula>BillingRepName__r.PostCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求先郵便番号</label>
    <type>Text</type>
</CustomField>