force-app/main/default/objects/InvoiceInformation__c/fields/BillingRepName__c.field-meta.xml
<CustomField>
    <fullName>BillingRepName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求先担当名</label>
    <referenceTo>BliingContact__c</referenceTo>
    <relationshipLabel>請求書情報</relationshipLabel>
    <relationshipName>InvoiceInformations</relationshipName>
    <type>Lookup</type>
</CustomField>