force-app/main/default/objects/InvoiceInformation__c/fields/BillingTradingTargetName__c.field-meta.xml
<CustomField>
    <fullName>BillingTradingTargetName__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <label>請求先取引先名</label>
    <type>Text</type>
</CustomField>