force-app/main/default/objects/InvoiceInformation__c/fields/BillingURLA__c.field-meta.xml
<CustomField>
    <fullName>BillingURLA__c</fullName>
    <formula>&quot;https://bengo4.lightning.force.com/lightning/r/Seikyu__c/&quot;&amp; OrgA_SeikyuId__c &amp;&quot;/view&quot;</formula>
    <label>組織A請求URL</label>
    <type>Text</type>
</CustomField>