force-app/main/default/objects/InvoiceInformation__c/fields/CalculatingTax__c.field-meta.xml
<CustomField>
    <fullName>CalculatingTax__c</fullName>
    <label>消費税</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>