force-app/main/default/objects/InvoiceInformation__c/fields/HonorificTitle__c.field-meta.xml
<CustomField>
    <fullName>HonorificTitle__c</fullName>
    <label>敬称</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>様</fullName>
                <default>true</default>
                <label>様</label>
            </value>
            <value>
                <fullName>御中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>