force-app/main/default/objects/InvoiceInformation__c/fields/ImportId__c.field-meta.xml
<CustomField>
    <fullName>ImportId__c</fullName>
    <label>楽楽明細取込ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>