force-app/main/default/objects/InvoiceInformation__c/fields/IncludeTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>IncludeTaxAmount__c</fullName>
    <label>税込金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>