force-app/main/default/objects/InvoiceInformation__c/fields/IncludingTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>IncludingTaxAmount__c</fullName>
    <formula>TaxExcludedAmount__c + (TaxExcludedAmount__c* (VALUE(TEXT(CalculatingTax__c))/100) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>税込金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>