force-app/main/default/objects/InvoiceInformation__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <formula>BillingRepName__r.MailingCity__c</formula>
    <label>市区郡</label>
    <type>Text</type>
</CustomField>