force-app/main/default/objects/InvoiceInformation__c/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <formula>BillingRepName__r.MailingState__c</formula>
    <label>都道府県</label>
    <type>Text</type>
</CustomField>