force-app/main/default/objects/InvoiceInformation__c/fields/MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet__c</fullName>
    <formula>BillingRepName__r.MailingStreet__c</formula>
    <label>町名・番地</label>
    <type>Text</type>
</CustomField>