force-app/main/default/objects/InvoiceInformation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>請求書情報</relationshipLabel>
    <relationshipName>InvoiceInformationOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>