force-app/main/default/objects/InvoiceInformation__c/fields/OrgA_SeikyuId__c.field-meta.xml
<CustomField>
    <fullName>OrgA_SeikyuId__c</fullName>
    <externalId>true</externalId>
    <label>組織A請求レコードID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>