force-app/main/default/objects/InvoiceInformation__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <label>入金予定日</label>
    <type>Date</type>
</CustomField>