force-app/main/default/objects/InvoiceInformation__c/fields/PaymentSite__c.field-meta.xml
<CustomField>
    <fullName>PaymentSite__c</fullName>
    <label>支払サイト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentSite</valueSetName>
    </valueSet>
</CustomField>