force-app/main/default/objects/InvoiceInformation__c/fields/RakurakuMeisaiItemCustomerCode__c.field-meta.xml
<CustomField>
    <fullName>RakurakuMeisaiItemCustomerCode__c</fullName>
    <formula>Opportunity__r.Contract.RakurakuMeisaiItemCustomerCode__c</formula>
    <label>楽楽明細顧客コード</label>
    <type>Text</type>
</CustomField>