force-app/main/default/objects/InvoiceInformation__c/fields/ReportDataCapturingDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDataCapturingDate__c</fullName>
    <label>楽楽明細帳票データ取込日</label>
    <type>Date</type>
</CustomField>