force-app/main/default/objects/InvoiceInformation__c/fields/ReportOutputDate__c.field-meta.xml
<CustomField>
    <fullName>ReportOutputDate__c</fullName>
    <description>支払い手段が「口座振替」だったら「振替日」、「請求書支払い」だったら 「入金予定日」</description>
    <formula>CASE( BillingPaymentMethod__c ,
&apos;口座振替&apos;,  TransferDate__c ,
&apos;請求書支払い&apos;,  PaymentDueDate__c ,
null)</formula>
    <label>帳票出力日付</label>
    <type>Date</type>
</CustomField>