force-app/main/default/objects/InvoiceInformation__c/fields/SalesTax__c.field-meta.xml
<CustomField>
    <fullName>SalesTax__c</fullName>
    <label>売上の消費税額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>