force-app/main/default/objects/InvoiceInformation__c/fields/SubscriberCode__c.field-meta.xml
<CustomField>
    <fullName>SubscriberCode__c</fullName>
    <label>加入者コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>