force-app/main/default/objects/InvoiceInformation__c/fields/SubscriberName__c.field-meta.xml
<CustomField>
    <fullName>SubscriberName__c</fullName>
    <label>加入者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>