force-app/main/default/objects/InvoiceInformation__c/fields/TaxExcludedAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxExcludedAmount__c</fullName>
    <label>税抜金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>