force-app/main/default/objects/InvoiceInformation__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>テスト項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>