force-app/main/default/objects/InvoiceInformation__c/fields/TransferDeadline__c.field-meta.xml
<CustomField>
    <fullName>TransferDeadline__c</fullName>
    <label>振込期日</label>
    <type>Date</type>
</CustomField>