force-app/main/default/objects/InvoiceInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>PaymentSite__c</columns>
    <columns>BillingPaymentMethod__c</columns>
    <columns>PaymentDueDate__c</columns>
    <columns>OrgA_SeikyuId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>